# slm_vs_llm

./: AGENTS.md  LICENSE  README.md  env.example  orchestrator.py  pyproject.toml  simple_example.py
config/: providers.yaml  tasks.yaml
data/: samples.jsonl
reports/: .gitkeep
src/bench/: __init__.py  main.py  utils.py
src/bench/adapters/: __init__.py  base.py  hf_adapter.py  mock_adapter.py  ollama_adapter.py  openai_adapter.py
src/bench/eval/: __init__.py  grader.py  metrics.py
